Moving to Java 11.  Moved long running class of tests to big.  Removed gui.
git-svn-id: svn://vsl.cis.udel.edu/civl/trunk@5371 fb995dde-84ed-4084-dfe6-e5aef3e2452c